[Cairo] Incorrect rendering for 135-deg skews https://bugs.webkit.org/show_bug.cgi?id=190513

Source/WebCore:

Compensation value to zero the the translation components
of the transformation matrix is incorrect if the matrix
has a shear factor.

Reviewed by Žan Doberšek.

Tests: fast/transforms/skew-x-135deg-with-gradient.html
       fast/transforms/skew-y-135deg-with-gradient.html

* platform/graphics/cairo/CairoUtilities.cpp:
(WebCore::drawPatternToCairoContext):

LayoutTests:

Reviewed by Žan Doberšek.

* fast/transforms/skew-x-135deg-with-gradient-expected.html: Added.
* fast/transforms/skew-x-135deg-with-gradient.html: Added.
* fast/transforms/skew-y-135deg-with-gradient-expected.html: Added.
* fast/transforms/skew-y-135deg-with-gradient.html: Added.


Canonical link: https://commits.webkit.org/205493@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237119 268f45cc-cd09-0410-ab3c-d52691b4dbfc